// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateCoveredLinesMetric should correctly generate covered lines metric: empty data 1`] = `
{
  "data": [],
  "name": "covered_lines",
  "translatedName": "project_activity.custom_metric.covered_lines",
  "type": "INT",
}
`;

exports[`generateCoveredLinesMetric should correctly generate covered lines metric: with data 1`] = `
{
  "data": [
    {
      "x": 2017-04-27T08:21:32.000Z,
      "y": 88,
    },
    {
      "x": 2017-04-30T23:06:24.000Z,
      "y": 50,
    },
  ],
  "name": "covered_lines",
  "translatedName": "project_activity.custom_metric.covered_lines",
  "type": "INT",
}
`;

exports[`generateSeries should correctly generate the series 1`] = `
[
  {
    "data": [
      {
        "x": 2017-04-27T08:21:32.000Z,
        "y": 88,
      },
      {
        "x": 2017-04-30T23:06:24.000Z,
        "y": 50,
      },
    ],
    "name": "covered_lines",
    "translatedName": "project_activity.custom_metric.covered_lines",
    "type": "INT",
  },
  {
    "data": [
      {
        "x": 2017-04-27T08:21:32.000Z,
        "y": 100,
      },
      {
        "x": 2017-04-30T23:06:24.000Z,
        "y": 100,
      },
    ],
    "name": "lines_to_cover",
    "translatedName": "lines_to_cover",
    "type": "PERCENT",
  },
]
`;

exports[`getGraphTypes should correctly return the graph types 1`] = `
[
  "issues",
  "coverage",
  "duplications",
  "custom",
]
`;

exports[`getGraphTypes should correctly return the graph types 2`] = `
[
  "issues",
  "coverage",
  "duplications",
]
`;
